Polish tile visuals, fix grid misalignment bug

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,51 +1,3 @@
-.tile-forest {
-  width: 50px;
-  height: 50px;
-  font-size: 9px;
-  background-color: rgb(11, 64, 25);
-  color: white;
-}
-
-.tile-forest-player {
-  width: 50px;
-  height: 50px;
-  font-size: 9px;
-  background-color: rgb(230, 178, 25);
-  color: white;
-}
-
-.tile-starship {
-  width: 50px;
-  height: 50px;
-  font-size: 9px;
-  background-color: rgb(110, 60, 60);
-  color: white;
-}
-
-.tile-starship-player {
-  width: 50px;
-  height: 50px;
-  font-size: 9px;
-  background-color: rgb(230, 178, 25);
-  color: white;
-}
-
-.tile-impactclearing {
-  width: 50px;
-  height: 50px;
-  font-size: 9px;
-  background-color: rgb(56, 56, 56);
-  color: white;
-}
-
-.tile-impactclearing-player {
-  width: 50px;
-  height: 50px;
-  font-size: 9px;
-  background-color: rgb(230, 178, 25);
-  color: white;
-}
-
 .aux-window {
   width: 200px;
   padding: 10px 0px 0px 10px;
